# eco-draft-2d

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: __init__.py  config.py
backend/app/schemas/: __init__.py  analysis.py  cad.py  checks.py  common.py  drawing.py  lca.py  optimization.py  optimization_simple.py  parts.py  session.py
backend/app/services/: Untitled-1.htm  __init__.py  nlp.py
backend/app/services/analysis/: __init__.py  analytic.py
backend/app/services/cad/: __init__.py  base_plate.py  gusset.py  importer.py  universal.py
backend/app/services/checks/: __init__.py  engine.py  manufacturability.py  rules.py
backend/app/services/drawing/: __init__.py  pdf.py
backend/app/services/io/: __init__.py  exporters.py
backend/app/services/lca/: __init__.py  simple.py
backend/app/services/nlp/: __init__.py  parser.py  prompts.py
backend/app/services/opt/: __init__.py  nsga2.py  simple_sampler.py
backend/app/services/session/: __init__.py  store.py
backend/backend/: test_washer.json
examples/: base_plate_example.json  gusset_example.json
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: Analysis.tsx  Canvas.tsx  Chat.tsx  Checks.tsx  LCA.tsx  ParetoChart.tsx  theme-provider.tsx
